polish : implement best practices